--- a/sha7/src/styles/Home.module.css
+++ b/sha7/src/styles/Home.module.css
@@ -1,9 +1,48 @@
+
 .main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-  background-image: linear-gradient(90deg,#5de0e6,#004aad)
+  padding-left: 6rem;
+  padding-right: 6rem;
+  background-image: linear-gradient(90deg,#5de0e6,#004aad);
+min-height: 100vh;
+}
+.nav{
+color: white;
+font-size: 1.2rem;
+font-family: 'Carter One', cursive;
+margin-left: 25px;
+cursor: pointer;
+}
+.navbrand{
+  font-family: 'Carter One', cursive;
+  font-size: 1.7rem;
+}
+.nav:hover{
+  transform: scale(1.2,1.2);
+}
+.container{
+  display: flex;
+  flex-direction: row;
+justify-content: space-between;
+}
+.first{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.first>p{
+  font-size: 2.5rem;
+  color: white;
+}
+.second{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.third{
+
 }
