--- a/sha7/src/styles/Home.module.css
+++ b/sha7/src/styles/Home.module.css
@@ -37,6 +37,8 @@ justify-content: space-between;
 .first>p{
   font-size: 2.5rem;
   color: white;
+  text-shadow: 2px 2px red;
+
 }
 .second{
 display: flex;
@@ -44,5 +46,7 @@ justify-content: center;
 align-items: center;
 }
 .third{
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
