--- a/sha7/src/styles/Home.module.css
+++ b/sha7/src/styles/Home.module.css
@@ -35,9 +35,12 @@ justify-content: space-between;
   flex-direction: column;
 }
 .first>p{
-  font-size: 2.5rem;
+  font-family:'Carter One', cursive; ;
+  font-size: 4rem;
+  font-weight: 500;
   color: white;
-  text-shadow: 2px 2px red;
+  text-shadow: 3px 3px #ff3131;
+ padding-bottom: 12rem;
 
 }
 .second{
@@ -45,8 +48,34 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
+
 .third{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
+}
+.third>img:hover{
+cursor: pointer;
+transform: scale(1.1,1.1);
+}
+.changetext::before{
+  content: "Mern Stack";
+  animation: animate infinite 3s;
+}
+@keyframes animate {
+  
+  0% {
+      content: "Mern Stack";
+  }
+
+  50% {
+      content: "Node Js";
+  }
+
+  75% {
+      content: "Next Js";
+  }
+
 }
