--- a/sha7/src/styles/Home.module.css
+++ b/sha7/src/styles/Home.module.css
@@ -56,9 +56,9 @@ align-items: center;
   align-items: center;
   gap: 3rem;
 }
-.third>img:hover{
+.third>a:hover{
 cursor: pointer;
-transform: scale(1.1,1.1);
+transform: rotate(320deg) scale(1.1,1.1);
 }
 .button{
   background-image: linear-gradient(90deg,#ff3131,#ff914d);
@@ -73,7 +73,31 @@ transform: scale(1.1,1.1);
 }
 .changetext::before{
   content: "Mern Stack";
-  animation: animate infinite 3s;
+  animation: animate infinite 6s;
+}
+.code{
+  height: 30rem;
+  width: 40rem;
+}
+.down{
+  width:3rem;
+  height: 3rem;
+}
+.git{
+width: 9rem;
+height: 5rem;
+}
+.linkd{
+  width: 4rem;
+  height: 4rem;
+}
+.twit{
+  width: 5rem;
+  height: 5rem;
+}
+.email{
+  width: 5rem;
+  height: 5rem;
 }
 @keyframes animate {
   
@@ -89,4 +113,48 @@ transform: scale(1.1,1.1);
       content: "Next Js";
   }
 
+}
+@media (min-height: 650px ) {
+  .first>p{
+    font-size: 25px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .button{
+    font-size: 15px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+  }
+  .code{
+    height: 280px;
+    width: 220px;
+  }
+  .down{
+    height: 25px;
+    width: 25px;
+  }
+  .git{
+    width: 5rem;
+    height: 3rem;
+    }
+    .linkd{
+      width: 2.5rem;
+      height: 2.5rem;
+      margin-right: 12px;
+    }
+    .twit{
+      width: 3rem;
+      height: 3rem;
+      margin-right: 12px;
+    }
+    .email{
+      width: 3rem;
+      height: 3rem;
+    }
+    .third{
+      flex-direction: row;
+      gap: 0rem;
+    }
 }
