--- a/sha7/src/styles/globals.css
+++ b/sha7/src/styles/globals.css
@@ -83,7 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  scrollbar-width:none;
+  scrollbar-color: blue;
 }
 
 body {
@@ -100,6 +100,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 
 @media (prefers-color-scheme: dark) {
   html {
