--- a/sha7/src/styles/contact.module.css
+++ b/sha7/src/styles/contact.module.css
@@ -11,7 +11,7 @@
     color: white;
     font-family: 'Carter One', cursive;
     text-shadow: 3px 3px #ff3131;
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
 }
 .form{
     display: flex;
@@ -32,10 +32,24 @@
     font-size: 1.5rem;
     color: white;
     font-family: 'Carter One', cursive;
+    text-shadow: 2px 2px #ff3131;
 }
 .input{
     border: 5px solid orangered;
 }
+.input[type=text]{
+    color: #ff3131;
+    font-family: 'Carter One', cursive;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+.input[type=email]{
+    color: #ff3131;
+    font-family: 'Carter One', cursive;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
 .button{
     background-image: linear-gradient(90deg,#ff3131,#ff914d);
     color: white;
@@ -43,6 +57,77 @@
     border: none;
     border-radius: 15px;
     font-size: 1.1rem;
- padding: 1.2rem;
+ padding: 0.8rem;
  margin-left: 15rem;
+  }
+  .cof{
+    height: 13rem;
+    width: 10rem;
+    margin-left: 10rem;
+  
+  }
+  .cof:hover{
+transform: rotate(-45deg) ;
+cursor: pointer;
+  }
+  .copy{
+    color: white;
+    font-family:'Carter One', cursive; 
+    font-size: 1.2rem;
+    margin-top: 9rem;
+  }
+  .success{
+    font-size: 1rem;
+    color: white;
+    font-family:'Carter One', cursive; 
+  }
+  @media (min-height: 650px ){
+    .heading{
+        font-size: 15px;
+        padding-bottom: 0.2rem;
+        padding-top: 1.2rem;
+    }
+    .label{
+        font-size: 12px;
+    }
+    .button{
+        font-size: 10px;
+        padding: 0.5rem;
+    }
+    .form{
+        padding: 3rem;
+    }
+    .item2{
+        gap: 3rem;
+    }
+    .cof{
+display: none;
+    }
+    .main{
+        min-height: fit-content;
+    }
+    .copy{
+        font-size: 0.5rem;
+        margin-top: 1rem;
+    }
+    .success{
+        font-size: 10px;
+        margin-left: 5rem;
+    }
+  }
+  @media (min-height:880px){
+    .main{
+        min-height: 62vh;
+    }
+    .cof{
+       display: none;
+            }
+  }
+  @media (min-height:840px){
+    .main{
+        min-height: 55vh;
+    }
+    .cof{
+        display: none;
+            }
   }
