--- a/sha7/src/styles/Home.module.css
+++ b/sha7/src/styles/Home.module.css
@@ -116,7 +116,7 @@ height: 5rem;
   }
 
 }
-@media (min-height: 650px ) {
+@media (min-width: 360px) and (max-width:1250px ) {
   .main{
     min-height: fit-content;
   }
