--- a/sha7/src/styles/about.module.css
+++ b/sha7/src/styles/about.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
+  background-image: linear-gradient(90deg, #5de0e6, #004aad);
 }
 .row {
   width: 100%;
