--- a/sha7/src/styles/globals.css
+++ b/sha7/src/styles/globals.css
@@ -83,7 +83,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  scrollbar-color: blue;
+  scrollbar-width:none;
+  scroll-snap-type : y mandatory;
+overflow-y: auto;
+
+}
+body::-webkit-scrollbar{
+  display : none;
 }
 
 body {
